get travis to install python 3, use it to run script

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,4 @@
+language: python
+python: ['3.4']
 install: git clone https://github.com/combatopera/pyven.git ../pyven
-script: ../pyven/drone.io.py
+script: python ../pyven/drone.io.py
