--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,2 @@
-language: python
-python: ['3.4']
 install: git clone https://github.com/combatopera/pyven.git ../pyven
-script: python ../pyven/drone.io.py
+script: ../pyven/travis_ci.py
